# calc-teacher-hours

./: .dockerignore  .env  .env.prod.sample  .gitignore  Makefile  README.md  docker-compose-local-dev.yml  docker-compose.yml  pyproject.toml
calc-local-dev/: docker-compose-local-dev.yml
docker/django/: Dockerfile  entrypoint.sh
docker/nginx/: Dockerfile
docker/nginx/config/: calc.conf  nginx.conf
src/: create_superuser.py
src/apps/calculation/: apps.py  urls.py  views.py
src/apps/calculation/models/: teacher_hour_preset.py
src/apps/schedule/: admin.py  db_routers.py  models.py  urls.py  views.py
src/apps/schedule/migrations/: 0001_initial.py
src/apps/user/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
src/apps/user/migrations/: 0001_initial.py  0002_customuser_middle_name.py
src/apps/user/views/: auth_views.py
src/config/: settings.py  urls.py
src/templates/: base.html
src/templates/calculation/: pair_search.html
src/templates/schedule/: audience_list.html  base.html  building_list.html  faculty_list.html  group_list.html  pair_list.html  teacher_list.html
src/templates/user/: home.html  login.html  register.html
src/templates/user/partials/: login_form.html  register_form.html
