[project]
name = "calc-teacher-hours"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.1",
    "django-htmx>=1.27.0",
    "gunicorn>=24.1.1",
    "htmx>=0.0.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
]
